<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memorize Multiplayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="label_already_reg">If you are already registered, push Connect button.</string>
    <string name="label_fullname">Full Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_register">Register</string>
    <string name="label_connect">Connect</string>
    <string name="btnEnviar">Enviar</string>
    
    
    <string name="name_new_contact">Name of the new contact</string>
    <string name="new_contact">New contact</string>
    
    
    <string name="server_adding_conctact">Trying (attempt %1$d/%2$d) to connect to server.</string>
    <string name="server_contact_added">From Server: successfully added contact!</string>
    
    
    <!-- activity_register -->
    
    <string name="register_user_details">Fill your details: </string>
    <string name="register_register">Register</string>
    <string name="register_already_registered">I am already registered!</string>
    <string name="register_sexo">Genre</string>
    <string name="register_hint_id">Username</string>
    <string name="register_hint_pass">Password</string>
    <string name="register_hint_email">e-mail</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_surname">Surname</string>
    
    
    <!-- activity_login -->
    <string name="login_hint_id">Username</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_connect">Login</string>
    <string name="login_forget_pass">Forget my password</string>
    
    
    <!-- AddFriends -->
    <string name="addfriends_hint_name">Friend\'s name</string>
    <string name="addfriends_add">Add a friend</string>
    
   
    
    <!-- activity_mainMenu -->
    <string name="mainmenu_new_game">Start new game</string>
    <string name="mainmenu_games">Games</string>
    <string name="mainmenu_resume_game">Resume game</string>
    <string name="mainmenu_friends">Friends</string>
    <string name="mainmenu_form">Problems and suggestions</string>
    <string name="mainmenu_profile">Profile</string>
    
    
    
    <!-- fragment_activity_games -->
    <string name="frgact_games_rdy_games">Games are ready to play.</string>
    <string name="frgact_games_wait_games">Games are waiting for other player.</string>
    
    <!-- ItemListGame -->
    <string name="itemlistgame_picture">Opponent\'s picture</string>
    
    <!--activity_board -->
    <string name="board_send_move">Send your move</string>
    <string name="board_opname">Opponent\'s name</string>
    <string name="board_score">score: </string>
    <string name="board_show_oppmove">Show opponent\'s move</string>
    <string name="board_reset_move">Reset my move</string>
    <string name="board_username">username</string>
    <string name="board_oppname">oppname</string>
    <string name="board_checkMove">Check move</string>
    <string name="board_threshold">Opponent threshold: </string>
    <string name="board_newThreshold">User threshold: </string>
    
    <!-- activity_tutorial -->
    <string name="tutorial_touch">You should press colors</string>
    <string name="tutorial_reset">You can reset the actual sequence of colors</string>
    <string name="tutorial_send">Your move is ready, you can send it</string>
    <string name="tutorial_eye">You can check your opponent\'s move only once</string>
    <string name="tutorial_tic">You can check if you guess your opponent\'s move</string>
    

</resources>

