<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/background"
		    >
		
		<LinearLayout
          
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:padding="40dip"
          android:id="@+id/layoutlogin"
          android:layout_gravity="center"
          android:gravity="center"    >
          
		   <ImageView
	        android:id="@+id/imageViewlogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/splash"
	        android:contentDescription="@string/app_name"
	        android:layout_marginBottom="10dp" 
	        />
                
          <RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
		    
          <EditText 
              android:id="@+id/login_et_name"
              android:background="@drawable/edittext_form_top"
              style="@style/EstiloRegistroET"    
              android:hint="@string/login_hint_id"  />
		  
          <ImageView
		        android:id="@+id/idIV"
		        style="@style/EstiloImageViewParaEditText"
		        android:layout_alignTop="@+id/login_et_name"
		        android:layout_alignBottom="@+id/login_et_name"
		        android:layout_alignLeft="@+id/login_et_name"
		        android:src="@drawable/form_id"
		        android:contentDescription="@string/register_register" />
		
		</RelativeLayout>
          
         <RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
          
          <EditText 
                android:id="@+id/login_et_password"
              	style="@style/EstiloRegistroET.password"
                android:background="@drawable/edittext_form_bottom"
                android:hint="@string/login_hint_pass" />  
           
          <ImageView
		        android:id="@+id/passIV"
		        style="@style/EstiloImageViewParaEditText"
		        android:layout_alignTop="@+id/login_et_password"
		        android:layout_alignBottom="@+id/login_et_password"
		        android:layout_alignLeft="@+id/login_et_password"
		        android:src="@drawable/form_clave"
		        android:contentDescription="@string/register_register" />
		
		</RelativeLayout>
      
        <Button 
            	android:id="@+id/login_button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/login_connect"
                android:background="@drawable/button_rounded_corners"
                style="@style/EstiloMenuButton"
                android:onClick="onClick"
          />
        
        <Button 
                android:id="@+id/login_button_forget"
                android:layout_marginTop="6dp"
                android:text="@string/login_forget_pass"
                android:background="@drawable/button_rounded_corners"
                style="@style/EstiloMenuButton"
               	android:onClick="onClick"
          />
                   
	</LinearLayout>
</ScrollView>
