<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background" >

    <ImageButton
        android:id="@+id/profile_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_avatar" 
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:onClick="onClick"/>
    
    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center">
    
         <TextView
		        android:id="@+id/profile_name"
		        android:text="@string/board_threshold"
		        style="@style/EstiloTV"
		         />
	    <TextView
	        android:id="@+id/profile_victories"
	        style="@style/EstiloTV"
	        android:text="@string/board_newThreshold"
	         />
	    <TextView
	        android:id="@+id/profile_defeats"
	        style="@style/EstiloTV"
	        android:text="@string/board_newThreshold"
	         />
    </LinearLayout>

</LinearLayout>
