<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@drawable/background"
		    android:padding="40dp" >
		
		<LinearLayout
          
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          
          android:id="@+id/layout1"
          android:layout_gravity="center"
          android:gravity="center" >
          
		    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/games_ready"
	        android:contentDescription="@string/app_name"
	        android:layout_marginBottom="10dp" 
	        />
		    
		    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/frgact_games_rdy_games"
            android:layout_marginBottom="10dp" />
		    
		  	<fragment class="es.rczone.simonsays.activities.fragments.FragmentGamesList"
	        android:id="@+id/frg_game_ready_list"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0px" />
		  	
		  	<ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/games_waiting"
	        android:contentDescription="@string/app_name"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="10dp" 
	        />
		  	
		  	 <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/frgact_games_wait_games"
            android:layout_marginBottom="10dp"
             />
		  	
		  	<fragment class="es.rczone.simonsays.activities.fragments.FragmentGamesList"
	        android:id="@+id/frg_game_waiting_list"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0px"
	         />
	 
          
		    
		</LinearLayout>
</ScrollView>
